feat: created validation of login

--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
         <button class="login_button" type="submit" disabled>Play</button>
     </form>
     
+    <script src="./src/login.js"></script>
 </body>
 </html>
