--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./styles/globalStyle.css">
     <link rel="stylesheet" href="./styles/login.css">
     
-    <title>Memory Game</title>
+    <title>Memory Game | Login</title>
 </head>
 <body>
 
