--- a/pages/game.html
+++ b/pages/game.html
@@ -2,11 +2,20 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
+
+    <link rel="stylesheet" href="../styles/globalStyle.css">
+    <link rel="stylesheet" href="../styles/game.css">
+    
     <title>Memory Game</title>
 </head>
 <body>
     
-    <h1>Página do Game</h1>
+    <div class="grid">
+        <div class="card">
+            <div class="face front"></div>
+            <div class="face back"></div>
+        </div>
+    </div>
 
 </body>
 </html>
