--- a/pages/game.html
+++ b/pages/game.html
@@ -10,12 +10,8 @@
 </head>
 <body>
     
-    <div class="grid">
-        <div class="card">
-            <div class="face front"></div>
-            <div class="face back"></div>
-        </div>
-    </div>
+    <div class="grid"></div>
 
+    <script src="../src/game.js"></script>
 </body>
 </html>
