feat: finished login page

--- a/pages/winner.html
+++ b/pages/winner.html
@@ -11,8 +11,14 @@
 <body>
     
     <div class="winner">
-        <h1>Você ganhou!!</h1>
+        <div class="data">
+            <h1 class="message"></h1>
+            <h2 class="seconds"></h2>
+        </div>
+        
+        <button class="index">Retornar</button>
     </div>
 
+    <script src="../src/winner.js"></script>
 </body>
 </html>
